--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <div class="waktu">
                 <div class="resepsi" data-aos="fade-right" data-aos-duration="2500">
                     <span>Resepsi Ngunduh Mantu</span>
-                    <p>PUKUL 13.00 - 15.00 WIB</p>
+                    <p>PUKUL 13.00 - 15jn.00 WIB</p>
                 </div>
                 <!-- <div class="sabtu">
                     <p> 21</p>
@@ -135,7 +135,8 @@
                 <p>di Gedung Griya Tritama, Jl. Batu Ampar II, RT 12/3, Batu Ampar, Kramatjati, Jakarta Timur</p>
             </div> -->
         </div>
-        <a href="https://goo.gl/maps/GmzVyqehH5B2uuEP8" target="_blank" data-aos="zoom-in" data-aos-duration="3000">Get Direction</a>    
+        <!-- <a href="https://goo.gl/maps/GmzVyqehH5B2uuEP8" target="_blank" data-aos="zoom-in" data-aos-duration="3000">Get Direction</a>  -->
+        <a href="https://maps.app.goo.gl/GmzVyqehH5B2uuEP8" target="_blank" data-aos="zoom-in" data-aos-duration="3000">Get Direction</a>       
     </div>
     
     <div class="sorry" data-aos="fade-right" data-aos-duration="3000">
