rikas himaya celebration

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <div class="waktu">
                 <div class="resepsi" data-aos="fade-right" data-aos-duration="2500">
                     <span>Resepsi Ngunduh Mantu</span>
-                    <p>PUKUL 13.00 - 15jn.00 WIB</p>
+                    <p>PUKUL 13.00 - 15.00 WIB</p>
                 </div>
                 <!-- <div class="sabtu">
                     <p> 21</p>
